Store value if length is over a size limit